<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.greyworks.neikergn.OverviewActivity$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/about_tx_webteam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/about_homepage" />

            <TextView
                android:id="@+id/about_inhalt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/about_inahlt" />

            <TextView
                android:id="@+id/about_mail_webteam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/mail_webteam"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/about_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app" />

            <TextView
                android:id="@+id/about_mail_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/mail_grey"
                android:textColor="@android:color/holo_blue_light" />

            <ImageView
                android:id="@+id/img_greyworks"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="GreyWorks Logo"
                android:minWidth="150dp"
                android:paddingTop="5dp"
                android:src="@drawable/greyworks" />

            <TextView
                android:id="@+id/about_faq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autoLink="web"
                android:text="@string/faq" />

            <Button
                android:id="@+id/btn_del_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_del_cache" />

            <Button
                android:id="@+id/btn_del_dl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_del_dl" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>